--- a/blogpost.html
+++ b/blogpost.html
@@ -12,12 +12,13 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de maestro</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
     <script type="text/javascript">(function(){window['__CF$cv$params']={r:'621c341d0f603ec8',m:'04ad3452223cffdf46e7312274127691f413bc0d-1613362483-1800-ATW/FMEa+vhjUDkFW/F7H+yjutGxbUtIj+TBAvr7vUFHNLfekQM1+aKEG4zmhncWC29NybdnpSB6XGbMgNHjKOTo9311D/7F5ZvRbkCFfSFSvGZYsusBgVGh28BhtLKENyt9Dfej32vfbtOstbokjgg+r9zIxif9rt2D/57LmDb3KfCM+WLXZCoTwDyO2RoogMCagMX7juFnY/NNpJIBTeNPk81y8D77HmLMG3410lfxng0WKEmYcsJ7P8BsJKhsHg==',s:[0xbb9e1ae87c,0xaee68643c2],}})();</script>
